gap fixed

--- a/css/style.css
+++ b/css/style.css
@@ -631,7 +631,7 @@ h3{
     width: 100%;
     max-width: 1200px;
     min-height: 80vh;
-    margin: 40px auto;
+    margin: 10px auto;
     padding: 0;
     align-items: center;
     flex-wrap: wrap;
